# cmake-issue-win32

./: CMakeLists.txt  x86-windows-msvc.cmake
